tests/testcases/errors/BCE0094-1.boo
"""
BCE0094-1.boo(5,10): BCE0094: Cannot branch into exception handler.
"""
try:
	goto label
except:
	:label

